--- a/angular.json
+++ b/angular.json
@@ -131,5 +131,8 @@
       }
     }
   },
-  "defaultProject": "movieDB"
+  "defaultProject": "movieDB",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
